data/all_generated_tests/raw_wast_tests/br_table_EdgeCaseFailuresinbr_table_2511.wast
;; ```  These test descriptions are designed to verify different aspects of the `br_table` instruction, focusing on edge cases and potential differences in error handling and behavior between WebAssembly and the `wizard_engine`.

(assert_invalid
  (module
    (func $incorrect-type
      (block
        (i32.const 0) 
        (br_table 0 0 (nop))
      )
    )
  )
  "type mismatch"
)